--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           <a href="">Home</a><a href="">Work</a>
           <i class="ri-twitter-x-line"></i>
         </div>
+        <div id="textcentre">
+          <h1>Hello,</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iure, tempore quam aut corporis ratione eius sequi aperiam ex. Maxime rerum blanditiis mollitia perferendis exercitationem tempore quo provident itaque quidem.</p>
+          <a href="#">Read</a>
+        </div>
       </div>
 
 
